--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ sqlalchemy = "^2.0.36"
 geoalchemy2 = "^0.15.2"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
+slowapi = "^0.1.9"
 
 
 [tool.poetry.group.dev.dependencies]
