--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ geoalchemy2 = "^0.15.2"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
 slowapi = "^0.1.9"
+sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
 
 
 [tool.poetry.group.dev.dependencies]
